ocp-multicluster-kustomize-sample-demo/ocpcluster1/overlays/db/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app1-db
  labels:
    project: app1-db
